--- a/public/about.html
+++ b/public/about.html
@@ -2,19 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <!-- <link rel="stylesheet" href="../node_modules\bootstrap\dist\css\bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="../node_modules\bootstrap\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>node-project-practice</title>
   </head>
-  <body class="container">
-  <h1 class="jumbotron text-center bg-dark">About Page Node-Project</h1>
-  <a href="index.html">Home</a>
-  <a href="contact.html">Contact</a>
+  <body class="container bg-dark">
+  <h1 class="jumbotron mt-4 text-center border shadow bg-dark text-light">About Page Node-Project</h1>
 
+  <ul class="nav border rounded bg-dark shadow">
+    <li class="nav-item">
+      <a class="nav-link text-light" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active text-light" href="contact.html">Contact</a>
+    </li>
+  </ul>
 
-    <!-- <script src="../node_modules\jquery\dist\jquery.min.js"></script>
+    <script src="../node_modules\jquery\dist\jquery.min.js"></script>
     <script src="../node_modules\@popperjs\core\dist\umd\popper.min.js"></script>
     <script src="../node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
-    <script src="js/script.js"></script> -->
+    <script src="js/script.js"></script>
   </body>
 </html>
