--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <title>node-project-practice</title>
   </head>
   <body class="container bg-dark text-light">
-  <h1 class="jumbotron text-center border bg-dark">Home Page Node-Project</h1>
+  <h1 class="jumbotron mt-4 text-center border bg-dark shadow">Home Page Node-Project</h1>
   <!-- <a href="about.html">About</a>
   <a href="contact.html">Contact</a> -->
-  <ul class="nav border rounded">
+  <ul class="nav border rounded shadow">
     <li class="nav-item">
       <a class="nav-link text-light active" href="about.html">About</a>
     </li>
@@ -20,10 +20,10 @@
   </ul>
 
   <div class="d-flex align-items-center mt-4">
-    <img class="w-25" src="images/img1.jpg" alt="an image">
-    <img class="w-25" src="images/img2.jpg" alt="an image">
-    <img class="w-25" src="images/img3.jpg" alt="an image">
-    <img class="w-25" src="images/img4.jpg" alt="an image">
+    <img class="w-25 shadow" src="images/img1.jpg" alt="an image">
+    <img class="w-25 shadow" src="images/img2.jpg" alt="an image">
+    <img class="w-25 shadow" src="images/img3.jpg" alt="an image">
+    <img class="w-25 shadow" src="images/img4.jpg" alt="an image">
   </div>
 
 
