--- a/public/contact.html
+++ b/public/contact.html
@@ -7,9 +7,9 @@
     <title>node-project-practice</title>
   </head>
   <body class="container bg-dark">
-    <h1 class="jumbotron text-center bg-dark border text-light">Contact Page Node-Project</h1>
+    <h1 class="jumbotron mt-4 text-center bg-dark border text-light shadow">Contact Page Node-Project</h1>
 
-    <ul class="nav border rounded bg-dark">
+    <ul class="nav border rounded bg-dark shadow">
       <li class="nav-item">
         <a class="nav-link text-light" href="index.html">Home</a>
       </li>
@@ -17,26 +17,23 @@
         <a class="nav-link active text-light" href="about.html">About</a>
       </li>
     </ul>
+
     <div class="d-flex justify-content-center">
-      <form class="w-25 border rounded p-3 mt-4 bg-dark text-light" action="sendForm" method="post">
+      <form class="w-50 border rounded p-3 mt-4 bg-dark text-light shadow" action="sendForm" method="post">
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <!-- name attributes are required on input fields -->
+          <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <!-- name attributes are required on input fields -->
+          <input type="password" name="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <!-- <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div> -->
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
-
-
 
     <script src="../node_modules\jquery\dist\jquery.min.js"></script>
     <script src="../node_modules\@popperjs\core\dist\umd\popper.min.js"></script>
